--- a/sass/_core.sass
+++ b/sass/_core.sass
@@ -1,4 +1,10 @@
 
+@font-face
+  font-family: FontAwesome
+  src: url('#{$fh-fa-path}/fontawesome-webfont.woff?v=#{$fh-fa-version}') format('woff'), url('#{$fh-fa-path}/fontawesome-webfont.ttf?v=#{$fh-fa-version}') format('truetype'), url('#{$fh-fa-path}/fontawesome-webfont.svg?v=#{$fh-fa-version}#fontawesomeregular') format('svg')
+  font-weight: normal
+  font-style: normal
+
 %fh:before,
 %fha:after
   -moz-box-sizing: border-box
