--- a/sass/_font-handsome.sass
+++ b/sass/_font-handsome.sass
@@ -1,14 +1,7 @@
 
 @import var
 @import mixin
-@import path
 @import core
-@import larger
-@import fixed-width
-@import list
-@import bordered-pulled
-@import spinning
-@import rotated-flipped
-@import stacked
+@import feature
 @import icon
 
