--- a/sass/_core.sass
+++ b/sass/_core.sass
@@ -1,7 +1,7 @@
 
 @font-face
   font-family: FontAwesome
-  src: url('#{$fh-fa-path}/fontawesome-webfont.woff?v=#{$fh-fa-version}') format('woff'), url('#{$fh-fa-path}/fontawesome-webfont.ttf?v=#{$fh-fa-version}') format('truetype'), url('#{$fh-fa-path}/fontawesome-webfont.svg?v=#{$fh-fa-version}#fontawesomeregular') format('svg')
+  src: url('#{$fh-fa-path}/fontawesome-webfont.woff2?v=#{$fh-fa-version}') format('woff2'), url('#{$fh-fa-path}/fontawesome-webfont.woff?v=#{$fh-fa-version}') format('woff'), url('#{$fh-fa-path}/fontawesome-webfont.ttf?v=#{$fh-fa-version}') format('truetype'), url('#{$fh-fa-path}/fontawesome-webfont.svg?v=#{$fh-fa-version}#fontawesomeregular') format('svg')
   font-weight: normal
   font-style: normal
 
@@ -21,6 +21,7 @@
   text-rendering: auto 
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  transform: translate(0, 0) // ensures no half-pixel rendering in firefox
 
 =fh( $icon, $color: false )
   @extend %fh
