--- a/sass/_var.sass
+++ b/sass/_var.sass
@@ -1,12 +1,14 @@
 
-$fh-fa-path:        '//netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts' !default
-$fh-fa-version:       '4.2.0' !default
+$fh-fa-path:        '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts' !default
+$fh-fa-version:       '4.3.0' !default
 $fh-fallback:         sans-serif !default
 
 $fh-border-color:     #eee !default
 $fh-color:            #333 !default
 $fh-inverse:          #fff !default
 $fh-li-width:         (30em / 14) !default
+
+
 
 $fh-var-adjust: '\f042'
 $fh-var-adn: '\f170'
@@ -55,6 +57,7 @@ $fh-var-bar-chart: '\f080'
 $fh-var-bar-chart-o: '\f080'
 $fh-var-barcode: '\f02a'
 $fh-var-bars: '\f0c9'
+$fh-var-bed: '\f236'
 $fh-var-beer: '\f0fc'
 $fh-var-behance: '\f1b4'
 $fh-var-behance-square: '\f1b5'
@@ -82,6 +85,7 @@ $fh-var-building-o: '\f0f7'
 $fh-var-bullhorn: '\f0a1'
 $fh-var-bullseye: '\f140'
 $fh-var-bus: '\f207'
+$fh-var-buysellads: '\f20d'
 $fh-var-cab: '\f1ba'
 $fh-var-calculator: '\f1ec'
 $fh-var-calendar: '\f073'
@@ -97,6 +101,8 @@ $fh-var-caret-square-o-left: '\f191'
 $fh-var-caret-square-o-right: '\f152'
 $fh-var-caret-square-o-up: '\f151'
 $fh-var-caret-up: '\f0d8'
+$fh-var-cart-arrow-down: '\f218'
+$fh-var-cart-plus: '\f217'
 $fh-var-cc: '\f20a'
 $fh-var-cc-amex: '\f1f3'
 $fh-var-cc-discover: '\f1f2'
@@ -145,6 +151,7 @@ $fh-var-comments: '\f086'
 $fh-var-comments-o: '\f0e6'
 $fh-var-compass: '\f14e'
 $fh-var-compress: '\f066'
+$fh-var-connectdevelop: '\f20e'
 $fh-var-copy: '\f0c5'
 $fh-var-copyright: '\f1f9'
 $fh-var-credit-card: '\f09d'
@@ -156,11 +163,13 @@ $fh-var-cubes: '\f1b3'
 $fh-var-cut: '\f0c4'
 $fh-var-cutlery: '\f0f5'
 $fh-var-dashboard: '\f0e4'
+$fh-var-dashcube: '\f210'
 $fh-var-database: '\f1c0'
 $fh-var-dedent: '\f03b'
 $fh-var-delicious: '\f1a5'
 $fh-var-desktop: '\f108'
 $fh-var-deviantart: '\f1bd'
+$fh-var-diamond: '\f219'
 $fh-var-digg: '\f1a6'
 $fh-var-dollar: '\f155'
 $fh-var-dot-circle-o: '\f192'
@@ -190,6 +199,8 @@ $fh-var-eye: '\f06e'
 $fh-var-eye-slash: '\f070'
 $fh-var-eyedropper: '\f1fb'
 $fh-var-facebook: '\f09a'
+$fh-var-facebook-f: '\f09a'
+$fh-var-facebook-official: '\f230'
 $fh-var-facebook-square: '\f082'
 $fh-var-fast-backward: '\f049'
 $fh-var-fast-forward: '\f050'
@@ -231,6 +242,7 @@ $fh-var-folder-o: '\f114'
 $fh-var-folder-open: '\f07c'
 $fh-var-folder-open-o: '\f115'
 $fh-var-font: '\f031'
+$fh-var-forumbee: '\f211'
 $fh-var-forward: '\f04e'
 $fh-var-foursquare: '\f180'
 $fh-var-frown-o: '\f119'
@@ -241,6 +253,7 @@ $fh-var-gbp: '\f154'
 $fh-var-ge: '\f1d1'
 $fh-var-gear: '\f013'
 $fh-var-gears: '\f085'
+$fh-var-genderless: '\f1db'
 $fh-var-gift: '\f06b'
 $fh-var-git: '\f1d3'
 $fh-var-git-square: '\f1d2'
@@ -255,6 +268,7 @@ $fh-var-google-plus: '\f0d5'
 $fh-var-google-plus-square: '\f0d4'
 $fh-var-google-wallet: '\f1ee'
 $fh-var-graduation-cap: '\f19d'
+$fh-var-gratipay: '\f184'
 $fh-var-group: '\f0c0'
 $fh-var-h-square: '\f0fd'
 $fh-var-hacker-news: '\f1d4'
@@ -267,9 +281,11 @@ $fh-var-header: '\f1dc'
 $fh-var-headphones: '\f025'
 $fh-var-heart: '\f004'
 $fh-var-heart-o: '\f08a'
+$fh-var-heartbeat: '\f21e'
 $fh-var-history: '\f1da'
 $fh-var-home: '\f015'
 $fh-var-hospital-o: '\f0f8'
+$fh-var-hotel: '\f236'
 $fh-var-html5: '\f13b'
 $fh-var-ils: '\f20b'
 $fh-var-image: '\f03e'
@@ -293,6 +309,7 @@ $fh-var-laptop: '\f109'
 $fh-var-lastfm: '\f202'
 $fh-var-lastfm-square: '\f203'
 $fh-var-leaf: '\f06c'
+$fh-var-leanpub: '\f212'
 $fh-var-legal: '\f0e3'
 $fh-var-lemon-o: '\f094'
 $fh-var-level-down: '\f149'
@@ -324,10 +341,17 @@ $fh-var-mail-reply: '\f112'
 $fh-var-mail-reply-all: '\f122'
 $fh-var-male: '\f183'
 $fh-var-map-marker: '\f041'
+$fh-var-mars: '\f222'
+$fh-var-mars-double: '\f227'
+$fh-var-mars-stroke: '\f229'
+$fh-var-mars-stroke-h: '\f22b'
+$fh-var-mars-stroke-v: '\f22a'
 $fh-var-maxcdn: '\f136'
 $fh-var-meanpath: '\f20c'
+$fh-var-medium: '\f23a'
 $fh-var-medkit: '\f0fa'
 $fh-var-meh-o: '\f11a'
+$fh-var-mercury: '\f223'
 $fh-var-microphone: '\f130'
 $fh-var-microphone-slash: '\f131'
 $fh-var-minus: '\f068'
@@ -339,8 +363,10 @@ $fh-var-mobile-phone: '\f10b'
 $fh-var-money: '\f0d6'
 $fh-var-moon-o: '\f186'
 $fh-var-mortar-board: '\f19d'
+$fh-var-motorcycle: '\f21c'
 $fh-var-music: '\f001'
 $fh-var-navicon: '\f0c9'
+$fh-var-neuter: '\f22c'
 $fh-var-newspaper-o: '\f1ea'
 $fh-var-openid: '\f19b'
 $fh-var-outdent: '\f03b'
@@ -365,6 +391,7 @@ $fh-var-pie-chart: '\f200'
 $fh-var-pied-piper: '\f1a7'
 $fh-var-pied-piper-alt: '\f1a8'
 $fh-var-pinterest: '\f0d2'
+$fh-var-pinterest-p: '\f231'
 $fh-var-pinterest-square: '\f0d3'
 $fh-var-plane: '\f072'
 $fh-var-play: '\f04b'
@@ -414,8 +441,10 @@ $fh-var-scissors: '\f0c4'
 $fh-var-search: '\f002'
 $fh-var-search-minus: '\f010'
 $fh-var-search-plus: '\f00e'
+$fh-var-sellsy: '\f213'
 $fh-var-send: '\f1d8'
 $fh-var-send-o: '\f1d9'
+$fh-var-server: '\f233'
 $fh-var-share: '\f064'
 $fh-var-share-alt: '\f1e0'
 $fh-var-share-alt-square: '\f1e1'
@@ -424,11 +453,15 @@ $fh-var-share-square-o: '\f045'
 $fh-var-shekel: '\f20b'
 $fh-var-sheqel: '\f20b'
 $fh-var-shield: '\f132'
+$fh-var-ship: '\f21a'
+$fh-var-shirtsinbulk: '\f214'
 $fh-var-shopping-cart: '\f07a'
 $fh-var-sign-in: '\f090'
 $fh-var-sign-out: '\f08b'
 $fh-var-signal: '\f012'
+$fh-var-simplybuilt: '\f215'
 $fh-var-sitemap: '\f0e8'
+$fh-var-skyatlas: '\f216'
 $fh-var-skype: '\f17e'
 $fh-var-slack: '\f198'
 $fh-var-sliders: '\f1de'
@@ -467,10 +500,12 @@ $fh-var-step-backward: '\f048'
 $fh-var-step-forward: '\f051'
 $fh-var-stethoscope: '\f0f1'
 $fh-var-stop: '\f04d'
+$fh-var-street-view: '\f21d'
 $fh-var-strikethrough: '\f0cc'
 $fh-var-stumbleupon: '\f1a4'
 $fh-var-stumbleupon-circle: '\f1a3'
 $fh-var-subscript: '\f12c'
+$fh-var-subway: '\f239'
 $fh-var-suitcase: '\f0f2'
 $fh-var-sun-o: '\f185'
 $fh-var-superscript: '\f12b'
@@ -505,6 +540,9 @@ $fh-var-toggle-off: '\f204'
 $fh-var-toggle-on: '\f205'
 $fh-var-toggle-right: '\f152'
 $fh-var-toggle-up: '\f151'
+$fh-var-train: '\f238'
+$fh-var-transgender: '\f224'
+$fh-var-transgender-alt: '\f225'
 $fh-var-trash: '\f1f8'
 $fh-var-trash-o: '\f014'
 $fh-var-tree: '\f1bb'
@@ -531,7 +569,14 @@ $fh-var-upload: '\f093'
 $fh-var-usd: '\f155'
 $fh-var-user: '\f007'
 $fh-var-user-md: '\f0f0'
+$fh-var-user-plus: '\f234'
+$fh-var-user-secret: '\f21b'
+$fh-var-user-times: '\f235'
 $fh-var-users: '\f0c0'
+$fh-var-venus: '\f221'
+$fh-var-venus-double: '\f226'
+$fh-var-venus-mars: '\f228'
+$fh-var-viacoin: '\f237'
 $fh-var-video-camera: '\f03d'
 $fh-var-vimeo-square: '\f194'
 $fh-var-vine: '\f1ca'
@@ -543,6 +588,7 @@ $fh-var-warning: '\f071'
 $fh-var-wechat: '\f1d7'
 $fh-var-weibo: '\f18a'
 $fh-var-weixin: '\f1d7'
+$fh-var-whatsapp: '\f232'
 $fh-var-wheelchair: '\f193'
 $fh-var-wifi: '\f1eb'
 $fh-var-windows: '\f17a'
