--- a/demo/demo.jade
+++ b/demo/demo.jade
@@ -73,6 +73,7 @@ html(lang='en')
         h2 Spinning icons
         .example
           p.loading Loading, be patient…
+          p.pulse-loading Loading, be patient…
           p.waiting Waiting for the server to respond…
           p: button.setting Setting 
           p
