--- a/demo/demo.sass
+++ b/demo/demo.sass
@@ -143,6 +143,10 @@ p.loading
   +fh( spinner )
   @extend %fh-spin
 
+p.pulse-loading
+  +fh( spinner )
+  @extend %fh-pulse
+
 p.waiting
   +fh( circle-o-notch, true )
   @extend %fh-spin
