--- a/sass/_feature.sass
+++ b/sass/_feature.sass
@@ -95,6 +95,11 @@
 // Spinning
 // --------
 
+%fh-pulse:before,
+%fha-pulse:after
+  -webkit-animation: fh-spin 1s infinite steps(8)
+  animation: fh-spin 1s infinite steps(8)
+
 %fh-spin:before,
 %fha-spin:after
   -webkit-animation: fh-spin 2s infinite linear
