--- a/demo.css
+++ b/demo.css
@@ -399,12 +399,12 @@ th {
 
 @font-face {
   font-family: FontAwesome;
-  src: url("//netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts/fontawesome-webfont.woff?v=4.2.0") format("woff"), url("//netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts/fontawesome-webfont.ttf?v=4.2.0") format("truetype"), url("//netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular") format("svg");
+  src: url("//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff2?v=4.3.0") format("woff2"), url("//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff?v=4.3.0") format("woff"), url("//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.ttf?v=4.3.0") format("truetype"), url("//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 .share:before, button.share-twitter:before, button.share-fb:before, button.config:before, #media button:before, .photo:before, nav.main li:before, article ul.cooker > li:before, article ul.cooker li:hover:before,
-article ul.cooker li.checked:before, article ul.cooker li.cutlery:before, .entry blockquote:nth-child(odd) p:first-child:before, .entry blockquote:nth-child(even) p:first-child:before, p.loading:before, p.waiting:before, button.setting:before, .military-code > li:before, a.tweet:before, button.report:before, pre.cli:before, p.no-photo:before,
+article ul.cooker li.checked:before, article ul.cooker li.cutlery:before, .entry blockquote:nth-child(odd) p:first-child:before, .entry blockquote:nth-child(even) p:first-child:before, p.loading:before, p.pulse-loading:before, p.waiting:before, button.setting:before, .military-code > li:before, a.tweet:before, button.report:before, pre.cli:before, p.no-photo:before,
 button.logout:after,
 .huge-photo:after,
 button.refresh:after,
@@ -426,6 +426,7 @@ p.no-photo:after {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
 }
 
 #media button {
@@ -503,6 +504,11 @@ article ul.cooker > li:before {
 .entry blockquote:nth-child(odd) p:first-child:before {
   float: right;
   margin-left: 0.3em;
+}
+
+p.pulse-loading:before {
+  -webkit-animation: fh-spin 1s infinite steps(8);
+  animation: fh-spin 1s infinite steps(8);
 }
 
 p.loading:before, p.waiting:before, button.setting:before,
@@ -686,7 +692,7 @@ article ul.cooker li.cutlery:before {
   content: "";
 }
 
-p.loading:before {
+p.loading:before, p.pulse-loading:before {
   content: "";
 }
 
