Update the demo

--- a/demo/demo.jade
+++ b/demo/demo.jade
@@ -3,6 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Font Handsome examples
+    link(rel='stylesheet' media='all' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css')
     link(rel='stylesheet' media='all' href='./demo.css')
   body
     header.layout
