--- a/styl/core.styl
+++ b/styl/core.styl
@@ -1,7 +1,7 @@
 
 @font-face
   font-family: FontAwesome
-  src: url($fh-fa-path + '/fontawesome-webfont.woff2?v=' + $fh-fa-version) format('woff2'), url($fh-fa-path + '/fontawesome-webfont.woff?v=' + $fh-fa-version) format('woff'), url($fh-fa-path + '/fontawesome-webfont.ttf?v=' + $fh-fa-version) format('truetype'), url($fh-fa-path + 'fontawesome-webfont.svg?v=' + $fh-fa-version +'#fontawesomeregular') format('svg')
+  src: url($fh-fa-path + '/fontawesome-webfont.woff2?v=' + $fh-fa-version) format('woff2'), url($fh-fa-path + '/fontawesome-webfont.woff?v=' + $fh-fa-version) format('woff'), url($fh-fa-path + '/fontawesome-webfont.ttf?v=' + $fh-fa-version) format('truetype'), url($fh-fa-path + '/fontawesome-webfont.svg?v=' + $fh-fa-version +'#fontawesomeregular') format('svg')
   font-weight: normal
   font-style: normal
 
